# pqc_fhe_benckmark

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  PROJECT_FILE_GUIDE.md  README.md  __init__.py  diagnose_gpu.py  docker-compose.yml  mkdocs.yml  pqc_fhe_integration.py  pyproject.toml  quickstart.py  requirements.txt  test_desilofhe_gpu.py  test_smart_default.py  test_v2.2.0_features.py  version.json
.claude/: CLAUDE.md  launch.json
api/: __init__.py  algorithm_config.py  enterprise_data.py  enterprise_data_old.py  live_data_fetcher.py  real_data_fetcher.py  server.py
benchmarks/: __init__.py
cli/: __init__.py  main.py
data/: ibm_backends_cache.json
data/benchmark_results/: all_multi_20260329_134927.json  all_multi_20260329_140630.json  all_multi_20260329_142528.json  all_multi_20260329_144235.json  all_multi_20260329_153041.json  all_multi_20260329_155905.json  all_multi_20260329_161623.json  all_multi_20260329_163145.json  all_multi_20260329_163235.json  all_multi_20260329_164927.json  all_multi_20260329_165016.json  all_multi_20260329_172901.json  all_multi_20260329_174653.json  all_multi_20260329_175121.json  all_multi_20260329_180524.json  all_multi_20260329_180847.json  all_multi_20260329_182224.json  all_multi_20260329_190142.json  all_multi_20260329_191851.json  all_multi_20260329_193833.json  all_multi_20260329_195551.json  all_multi_20260329_201154.json  all_multi_20260329_202828.json  all_multi_20260329_205421.json  all_multi_20260330_222619.json  all_multi_20260330_224346.json  all_multi_20260330_230015.json  blockchain_20260329_134750.json  blockchain_20260329_135227.json  blockchain_20260329_140457.json  blockchain_20260329_140931.json  blockchain_20260329_142349.json  blockchain_20260329_142832.json  blockchain_20260329_144056.json  blockchain_20260329_152906.json  blockchain_20260329_155728.json  blockchain_20260329_160208.json  blockchain_20260329_161440.json  blockchain_20260329_163005.json  blockchain_20260329_163058.json  (+231 more)
docs/: API.md  DESILO_API_COMPLIANCE_CHANGELOG.md  PQC_FHE_Technical_Report_v2.3.4.docx  PQC_FHE_Technical_Report_v2.3.5_Enterprise.docx  PQC_FHE_Technical_Report_v3.0.0_Enterprise.docx  PQC_FHE_Technical_Report_v3.1.0_Enterprise.docx  PQC_FHE_Technical_Report_v3.2.0_Enterprise.docx  PQC_FHE_Technical_Report_v3.5.0_Enterprise.docx  PROJECT_FILE_GUIDE.md  TECHNICAL_REPORT.md  generate_enterprise_report.py  generate_enterprise_word.py  generate_enterprise_word_full.py  generate_technical_report.py  generate_v350_report.js  generate_v350_report.py  generate_word_report.py  generate_word_report_complete.py  infographic.html  package.json  update_to_v300.py  update_to_v310.py  update_to_v320.py
docs/api/: fhe_engine.md  hybrid_manager.md  overview.md  websocket_api.md
docs/guides/: configuration.md  deployment.md  gpu_configuration.md  migration.md  performance_optimization.md  quickstart.md
docs/security/: nist_compliance.md  threat_model.md
docs/tutorials/: benchmarks.md  fhe_computation.md  pqc_key_exchange.md
examples/: blockchain_demo.py  financial_demo.py  healthcare_demo.py  iot_demo.py
kubernetes/helm/pqc-fhe/: Chart.yaml  values.yaml
kubernetes/helm/pqc-fhe/templates/: NOTES.txt  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  (+4 more)
logs/: pqc_fhe_server.log.4
monitoring/: prometheus.yml
src/: chebyshev_calculator.py  chebyshev_coefficients.py  gl_scheme_engine.py  ibm_quantum_backend.py  mpc_he_inference.py  pqc_fhe_integration.py  pqc_simulator.py  quantum_threat_simulator.py  quantum_verification.py  sector_benchmarks.py  sector_quantum_circuit_benchmark.py  sector_quantum_security.py  security_scoring.py  side_channel_assessment.py  version_loader.py
tests/: test_pqc_fhe.py
web_ui/: index.html
week1_core/: Dockerfile  check_desilofhe.py  desilo_fhe_engine.py  live_data_fetcher.py  quickstart.py  server.py  test_pqc_fhe.py  websocket_server.py
week1_core/docs/: PQC_FHE_Technical_Report_v2.3.4.docx  generate_report_v2.py
week1_core/web_ui/: index.html
week2_docs/: ARCHITECTURE.md  DESILO_API_COMPLIANCE.md  best_practices.md  cli.md  hybrid_workflow.md  index.md  installation.md  pqc_manager.md  rest_api.md  security_overview.md
week3_advanced/: enterprise_integration.md  use_cases.md
week4_production/: Dockerfile.gpu  SECURITY.md
week4_production/helm-pqc-fhe/templates/: _helpers.tpl  configmap.yaml  ingress.yaml
