# PQC-FHE Integration Portfolio
# Modern Python project configuration (PEP 517/518)

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc-fhe-integration"
version = "1.0.0"
description = "Post-Quantum Cryptography and Fully Homomorphic Encryption Integration Library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PQC-FHE Portfolio", email = "contact@example.com"}
]
keywords = [
    "post-quantum-cryptography",
    "pqc",
    "fully-homomorphic-encryption",
    "fhe",
    "ml-kem",
    "ml-dsa",
    "ckks",
    "cryptography",
    "quantum-resistant",
    "nist"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
pqc = [
    "liboqs-python>=0.10.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
all = [
    "pqc-fhe-integration[pqc,api,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/pqc-fhe-integration"
Documentation = "https://github.com/yourusername/pqc-fhe-integration#readme"
Repository = "https://github.com/yourusername/pqc-fhe-integration.git"
Issues = "https://github.com/yourusername/pqc-fhe-integration/issues"
Changelog = "https://github.com/yourusername/pqc-fhe-integration/blob/main/CHANGELOG.md"

[project.scripts]
pqc-fhe = "cli.main:main"
pqc-fhe-api = "api.server:main"
pqc-fhe-ws = "api.websocket_server:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["pqc_fhe_integration*", "api*", "benchmarks*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yml", "*.yaml"]

# Black formatter
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# isort import sorter
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# MyPy type checker
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "build/",
    "dist/",
]

# Pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
]
asyncio_mode = "auto"

# Coverage
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "examples/*",
    "*/__pycache__/*",
    ".venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70

# Flake8 (via pyproject.toml plugin or .flake8)
# Note: flake8 doesn't natively support pyproject.toml
# Use .flake8 file or flake8-pyproject plugin
